--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Your Site Inc.</title>
 		<meta charset="utf-8" />
-		<link href="css/main.css" type="text/css" rel="stylesheet" />
-		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+		<link href="css/main.css" type="text/css" rel="stylesheet" media="screen">
+		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" media="screen">
 	</head>
 	<body>
 		<nav>
@@ -56,7 +56,7 @@
 				opacity: 0,
 				ease: Expo.easeInOut
 				}, 0.1);
-				
+
 			</script>
 	</body>
 </html>
