--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<header>
 				<ul>
 					<li><a href=""><ion-icon name="infinite"></ion-icon></a></li>
-					<li class="nav-li"><a href="">About</a></li>
+					<li class="nav-li"><a href="">Aboutsssssssssss</a></li>
 					<li><a href="">Contact</a></li>
 				</ul>
 			</header>
