--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<title>Your Site Inc.</title>
 		<meta charset="utf-8" />
-		<link href="css/main.css" type="text/css" rel="stylesheet" media="screen">
-		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" media="screen">
+		<link href="css/main.css" type="text/css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<nav>
 			<header>
 				<ul>
 					<li><a href=""><ion-icon name="infinite"></ion-icon></a></li>
-					<li class="nav-li"><a href="">Aboutsssssssssss</a></li>
+					<li class="nav-li"><a href="">About</a></li>
 					<li><a href="">Contact</a></li>
 				</ul>
 			</header>
