--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Looking for something? -->
 		<title>Your Site Inc.</title>
 		<meta charset="utf-8" />
 		<link href="css/main.css" type="text/css" rel="stylesheet">
@@ -44,8 +45,8 @@
 			<br>
 		</div>
 		<div id="email" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true">
-				<h2><a href="mailto: karlantonberg@gmail.com">karlantonberg@gmail.com</h2>
-			</div>
+			<h2><a href="mailto: karlantonberg@gmail.com">karlantonberg@gmail.com</h2>
+		</div>
 		<script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 		<script type="text/javascript">
