--- a/about.html
+++ b/about.html
@@ -30,23 +30,21 @@
             <h1>Skills</h1>
             <h2>Design</h2>
             <div class="skills-used-container">
-                <img class="skill" src="/img/ps.svg" alt="Photoshop Logo" title="Photoshop">
-                <img class="skill" src="/img/illustrator.svg" alt="Illustrator Logo" title="Illustrator">
-                <img class="skill" src="/img/xd.svg" alt="Xd Logo" title="Xd">
-                <img class="skill" src="/img/ae.svg" alt="After Effects Logo" title="After Effects">
-                <img class="skill" src="/img/indesign.svg" alt="InDesign Logo" title="InDesign">
-                <img class="skill" src="/img/sketch.svg" alt="Sketch Logo" title="Sketch">
+                <img class="skill" src="/img/Icons/ps.svg" alt="Photoshop Logo" title="Photoshop">
+                <img class="skill" src="/img/Icons/illustrator.svg" alt="Illustrator Logo" title="Illustrator">
+                <img class="skill" src="/img/Icons/xd.svg" alt="Xd Logo" title="Xd">
+                <img class="skill" src="/img/Icons/ae.svg" alt="After Effects Logo" title="After Effects">
+                <img class="skill" src="/img/Icons/indesign.svg" alt="InDesign Logo" title="InDesign">
+                <img class="skill" src="/img/Icons/sketch.svg" alt="Sketch Logo" title="Sketch">
             </div>
             <h2>Web</h2>
             <div class="skills-used-container">
-                <img class="skill" src="/img/html.svg" alt="Photoshop Logo" title="Photoshop">
-                <img class="skill" src="/img/css.svg" alt="Illustrator Logo" title="Illustrator">
-                <img class="skill" src="/img/js.svg" alt="Xd Logo" title="Xd">
-                <img class="skill" src="/img/php.svg" alt="After Effects Logo" title="After Effects">
-                <img class="skill" src="/img/mysql.svg" alt="InDesign Logo" title="InDesign">
-                <img class="skill" src="/img/wordpress.svg" alt="Sketch Logo" title="Sketch">
-                <img class="skill" src="/img/node.svg" alt="Sketch Logo" title="Sketch">
-                <img class="skill" src="/img/vue.svg" alt="Sketch Logo" title="Sketch">
+                <img class="skill" src="/img/Icons/js.svg" alt="Xd Logo" title="Xd">
+                <img class="skill" src="/img/Icons/php.svg" alt="After Effects Logo" title="After Effects">
+                <img class="skill" src="/img/Icons/mysql.svg" alt="InDesign Logo" title="InDesign">
+                <img class="skill" src="/img/Icons/wordpress.svg" alt="Sketch Logo" title="Sketch">
+                <img class="skill" src="/img/Icons/node.svg" alt="Sketch Logo" title="Sketch">
+                <img class="skill" src="/img/Icons/vue.svg" alt="Sketch Logo" title="Sketch">
             </div>
         </main>
 		<div class="footer">
