--- a/kanye.html
+++ b/kanye.html
@@ -21,13 +21,13 @@
 		</header>
         <main>
             <div class="main-image">
-                <img src="/img/kanye1.png" alt="">
+                <img src="/img/Kanye/1.png" alt="">
             </div>
             <div class="main-text-container">
                 <h1>Home Page Mockups</h1>
                 <div class="single-text">
                     <p>
-                        I was bored one day so I decided to create a tribute to one of my favorite artists ever, Kanye West. These are four of my suggestions for how a Kanye West home page could look like. Each of the designs are built on the same wireframes - as such they feature the same logo, menu and external links.
+                        Decided to create a tribute to one of my favorite artists ever, Kanye West. These are four of my suggestions for how a Kanye West home page could look like. Each of the designs are built on the same wireframes - as such they feature the same logo, menu and external links.
                     </p>
                     <p>
                         The wireframes and mockups were mainly created in Adobe XD although Photoshop was used to create an image of Kanye with a transparent background. I've always been a sucker for teal, so that one had to be featured above the rest. Kanye if you're reading this, call me. Thanks.
@@ -35,8 +35,8 @@
                 </div>
                 <h2>Created with</h2>
                 <div class="skills-used-container">
-                    <img src="/img/xd.svg" alt="">
-                    <img src="/img/ps.svg" alt="">
+                    <img src="/img/Icons/xd.svg" alt="">
+                    <img src="/img/Icons/ps.svg" alt="">
                 </div>
                 <div class="single-text">
                     <p>
@@ -49,23 +49,27 @@
             </div>
             <h2>Gessle Created with</h2>
             <div class="skills-used-container">
-                <img src="/img/wordpress.svg" alt="">
-                <img src="/img/php.svg" alt="">
-                <img src="/img/figma.svg" alt="">
+                <img src="/img/Icons/wordpress.svg" alt="">
+                <img src="/img/Icons/php.svg" alt="">
+                <img src="/img/Icons/figma.svg" alt="">
             </div>
             <h2>Yoga Created with</h2>
             <div class="skills-used-container">
-                <img src="/img/xd.svg" alt="">
-                <img src="/img/illustrator.svg" alt="">
+                <img src="/img/Icons/xd.svg" alt="">
+                <img src="/img/Icons/illustrator.svg" alt="">
             </div>
             <h2>Music Player Created with</h2>
             <div class="skills-used-container">
-                <img src="/img/sketch.svg" alt="">
-                <img src="/img/illustrator.svg" alt="">
+                <img src="/img/Icons/sketch.svg" alt="">
+                <img src="/img/Icons/illustrator.svg" alt="">
             </div>
-            <img src="/img/kanye2.png" alt="">
-            <img src="/img/kanye3.png" alt="">
-            <img src="/img/kanye4.png" alt="">
+            <img src="/img/Kanye/2.png" alt="">
+            <img src="/img/Kanye/3.png" alt="">
+            <img src="/img/Kanye/4.png" alt="">
+            <video width="900" height="531" controls>
+                <source src="/img/Scope/Final-1.m4v" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </main>
 		<div class="footer">
 			<ul>
