--- a/kanye.html
+++ b/kanye.html
@@ -67,7 +67,7 @@
             <img src="/img/Kanye/3.png" alt="">
             <img src="/img/Kanye/4.png" alt="">
             <video width="900" height="531" controls>
-                <source src="/img/Scope/Final-1.m4v" type="video/mp4">
+                <source src="/img/Scope/1.m4v" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </main>
