--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             </nav>
 		</header>
         <main>
-            <img src="/img/3.png" alt="">
+			<img id="me" src="/img/Karl/1.png" alt="">
             <h1>Hi, my name is Karl 👋</h1>
             <h2></h2>
             <h2> I currently live in
