--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 				<li><div><a href="kanye.html"></a></div></li>
 				<li><div><a href="kanye.html"></a></div></li>
 				<li><div><a href="gessle.html"></a></div></li>
+				<li><div><a href="soundable.html"></a></div></li>
+				<li><div><a href="scope.html"></a></div></li>
+				<li><div><a href="flights.html"></a></div></li>
 				<li><div><a href="zenity.html"></a></div></li>
-				<li><div><a href="#"></a></div></li>
-				<li><div><a href="#"></a></div></li>
-				<li><div><a href="#"></a></div></li>
 			</ul>
 		</main>
 		<div class="footer">
