--- a/kanye.html
+++ b/kanye.html
@@ -24,7 +24,7 @@
                 <img src="/img/Kanye/1.png" alt="">
             </div>
             <div class="main-text-container">
-                <h1>Home Page Mockups</h1>
+                <h1>Kanye Homepage Mockup</h1>
                 <div class="single-text">
                     <p>
                         Decided to create a tribute to one of my favorite artists ever, Kanye West. These are four of my suggestions for how a Kanye West home page could look like. Each of the designs are built on the same wireframes - as such they feature the same logo, menu and external links.
@@ -33,43 +33,15 @@
                         The wireframes and mockups were mainly created in Adobe XD although Photoshop was used to create an image of Kanye with a transparent background. I've always been a sucker for teal, so that one had to be featured above the rest. Kanye if you're reading this, call me. Thanks.
                     </p>
                 </div>
-                <h2>Created with</h2>
+                <h2 class="created-text">Created with</h2>
                 <div class="skills-used-container">
                     <img src="/img/Icons/xd.svg" alt="">
                     <img src="/img/Icons/ps.svg" alt="">
                 </div>
-                <div class="single-text">
-                    <p>
-                        Inspired by a lot of the designs I see online (particularly by the wave of silicon valley apps that are going around) I decided that I wanted to design the website for an app. I picked a random namelike Zenity, figured it had to do something with yoga or meditation. I then created a fitting logo in Illustrator.
-                    </p>
-                    <p>
-                        In our WordPress course we were asked to create a website without using templates, in other words, from scratch. We decided to revitalize the website of a swedish artist called Per Gessle. 
-                    </p>
-                </div>
-            </div>
-            <h2>Gessle Created with</h2>
-            <div class="skills-used-container">
-                <img src="/img/Icons/wordpress.svg" alt="">
-                <img src="/img/Icons/php.svg" alt="">
-                <img src="/img/Icons/figma.svg" alt="">
-            </div>
-            <h2>Yoga Created with</h2>
-            <div class="skills-used-container">
-                <img src="/img/Icons/xd.svg" alt="">
-                <img src="/img/Icons/illustrator.svg" alt="">
-            </div>
-            <h2>Music Player Created with</h2>
-            <div class="skills-used-container">
-                <img src="/img/Icons/sketch.svg" alt="">
-                <img src="/img/Icons/illustrator.svg" alt="">
             </div>
             <img src="/img/Kanye/2.png" alt="">
             <img src="/img/Kanye/3.png" alt="">
             <img src="/img/Kanye/4.png" alt="">
-            <video width="900" height="531" controls>
-                <source src="/img/Scope/1.m4v" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
         </main>
 		<div class="footer">
 			<ul>
