--- a/zenity.html
+++ b/zenity.html
@@ -38,7 +38,8 @@
                     <img src="/img/Icons/xd.svg" alt="">
                     <img src="/img/Icons/illustrator.svg" alt="">
                 </div>
-            </div>
+			</div>
+			<img class="border" src="/img/Yoga/logo1.png" alt="">
             <img class="border" src="/img/Yoga/1.png" alt="">
             <img class="border" src="/img/Yoga/2.png" alt="">
             <img class="border" src="/img/Yoga/3.png" alt="">
