--- a/soundable.html
+++ b/soundable.html
@@ -27,7 +27,7 @@
                 <h1>Music App Mockup</h1>
                 <div class="single-text">
                     <p>
-						As part of a graphic design course I have created a mockup of a mobile music player in Sketch. All of the icons used were created by me in Illustrator. 
+						As part of a graphic design course I have created a mockup of a mobile music player in Sketch. All of the icons used were created by me in Adobe Illustrator. 
                     </p>
                     <p>
                         
