--- a/zenity.html
+++ b/zenity.html
@@ -27,10 +27,10 @@
                 <h1>Yoga Website Mockup</h1>
                 <div class="single-text">
                     <p>
-                        Inspired by a lot of the designs I see online (particularly by the wave of silicon valley apps that are going around) I decided that I wanted to design the website for an app. I picked a random name like Zenity, figured it had to do something with yoga or meditation. 
+                        Inspired by a lot of the designs I see online (particularly by the wave of silicon valley apps that are going around) I decided that I wanted to design the website for an app. 
                     </p>
                     <p>
-                        I then created a fitting logo in Illustrator and website design in Adobe XD.
+                        I picked a random name like Zenity, figured it had to do something with yoga or meditation. I then created a fitting logo in Illustrator and website design in Adobe XD.
                     </p>
                 </div>
                 <h2 class="created-text">Created with</h2>
