--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 		</header>
         <main data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true">
 			<div class="about-container">
-				<img id="me" src="/img/Karl/1.png" alt="">
+				<img id="about-picture" src="/img/Karl/1.png" alt="">
 				<div class="about-text-container">
 					<h1>Hi 👋</h1>
 					<h2>My name is Karl.</h2>
@@ -31,27 +31,6 @@
 					<h2>I like web things.</h2>
 				</div>
 			</div>
-			<!--
-            <h1>Skills</h1>
-			<h2>Design</h2>
-            <div class="skills-used-container">
-                <img class="skill" src="/img/Icons/ps.svg" alt="Photoshop Logo" title="Photoshop">
-                <img class="skill" src="/img/Icons/illustrator.svg" alt="Illustrator Logo" title="Illustrator">
-                <img class="skill" src="/img/Icons/xd.svg" alt="Xd Logo" title="Xd">
-                <img class="skill" src="/img/Icons/ae.svg" alt="After Effects Logo" title="After Effects">
-                <img class="skill" src="/img/Icons/indesign.svg" alt="InDesign Logo" title="InDesign">
-                <img class="skill" src="/img/Icons/sketch.svg" alt="Sketch Logo" title="Sketch">
-            </div>
-            <h2>Web</h2>
-            <div class="skills-used-container">
-                <img class="skill" src="/img/Icons/js.svg" alt="Xd Logo" title="Xd">
-                <img class="skill" src="/img/Icons/php.svg" alt="After Effects Logo" title="After Effects">
-                <img class="skill" src="/img/Icons/mysql.svg" alt="InDesign Logo" title="InDesign">
-                <img class="skill" src="/img/Icons/wordpress.svg" alt="Sketch Logo" title="Sketch">
-                <img class="skill" src="/img/Icons/node.svg" alt="Sketch Logo" title="Sketch">
-                <img class="skill" src="/img/Icons/vue.svg" alt="Sketch Logo" title="Sketch">
-			</div>
-			-->
         </main>
 		<div class="footer">
 			<ul>
