--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 				<li><div><a href="scope.html"></a></div></li>
 				<li><div><a href="flights.html"></a></div></li>
 				<li><div><a href="zenity.html"></a></div></li>
+				<li><div><a href="soakage.html"></a></div></li>
 			</ul>
 		</main>
 		<div class="footer">
