--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/img/Logo/1.png">
 		<link href="css/main.css" type="text/css" rel="stylesheet">
+		<script src="js/main.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
@@ -42,6 +44,7 @@
 		</div>
 		<script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script type="text/javascript">
 			TweenMax.staggerFrom("header", 1, {
 			delay: 0,
