--- a/soundable.html
+++ b/soundable.html
@@ -8,6 +8,7 @@
 		<link href="css/main.css" type="text/css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
@@ -27,10 +28,10 @@
                 <h1>Music App Mockup</h1>
                 <div class="single-text">
                     <p>
-						As part of a graphic design course I have created a mockup of a mobile music player in Sketch. All of the icons used were created by me in Adobe Illustrator. 
+						A quick rendition of what a prototype of a mobile music player could look like. The design was created in Sketch. All of the icons used were created by me in Adobe Illustrator.
                     </p>
                     <p>
-                        
+                         
                     </p>
                 </div>
                 <h2 class="created-text">Created with</h2>
