--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 		<link href="css/main.css" type="text/css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
