--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- Looking for something? -->
+		<!-- Hi! Welcome to my code. -->
 		<title>Karl's Portfolio</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/img/Logo/1.png">
