--- a/scope.html
+++ b/scope.html
@@ -4,7 +4,7 @@
 		<!-- Looking for something? -->
 		<title>Karl's Portfolio</title>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/img/logo3.png">
+		<link rel="icon" href="/img/Logo/1.png">
 		<link href="css/main.css" type="text/css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
