--- a/about.html
+++ b/about.html
@@ -22,14 +22,43 @@
 		</header>
         <main data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true">
 			<div class="about-container">
-				<img id="about-picture" src="/img/Karl/1.png" alt="">
 				<div class="about-text-container">
-					<h1>Hi 👋</h1>
-					<h2>My name is Karl.</h2>
-					<h2>I currently live in
-						<a id="location" href="https://www.google.com/maps/place/J%C3%B6nk%C3%B6ping/@57.7187385,12.6388891,6z/data=!4m5!3m4!1s0x46508031565bd12d:0x8b01be57dcc2f66d!8m2!3d57.7826137!4d14.1617876">Jönköping</a>. 
-					</h2>
-					<h2>I like web things.</h2>
+					<img id="about-picture" src="/img/Karl/1.png" alt="">
+					<div>					
+						<h1>Hi 👋</h1>
+						<h2>My name is Karl.</h2>
+						<h2>I like doing web things.</h2>
+						<h2>I currently live in
+							<a id="location" href="https://www.google.com/maps/place/J%C3%B6nk%C3%B6ping/@57.7187385,12.6388891,6z/data=!4m5!3m4!1s0x46508031565bd12d:0x8b01be57dcc2f66d!8m2!3d57.7826137!4d14.1617876">Jönköping</a>. 
+						</h2>
+					</div>
+				</div>
+				<div class="skills-container">
+					<h1>Skills</h1>
+					<div class="skill-list-container">
+						<div class="web-container">
+							<h2></h2>
+							<p>Vue.js</p>
+							<p>Node.js</p>
+							<p>PHP</p>
+							<p>SQL</p>
+							<br>
+							<p>HTML</p>
+							<p>CSS</p>
+							<p>JavaScript</p>
+							<p>WordPress</p>
+						</div>
+						<div class="design-container">
+							<h2></h2>
+							<p>Adobe XD</p>
+							<p>Adobe Illustrator</p>
+							<p>Adobe Photoshop</p>
+							<br>
+							<p>Adobe InDesign</p>
+							<p>Adobe After Effects</p>
+							<p>Sketch</p>
+						</div>
+					</div>
 				</div>
 			</div>
         </main>
