--- a/kanye.html
+++ b/kanye.html
@@ -22,7 +22,7 @@
 		</header>
         <main>
             <div class="main-image">
-                <img src="/img/Kanye/1.png" alt="">
+                <img src="/img/Kanye/1.jpg" alt="">
             </div>
             <div class="main-text-container">
                 <h1>Kanye Homepage Mockup</h1>
@@ -41,9 +41,9 @@
                     <img src="/img/Icons/ps.svg" alt="">
                 </div>
             </div>
-            <img src="/img/Kanye/2.png" alt="">
-            <img src="/img/Kanye/3.png" alt="">
-            <img src="/img/Kanye/4.png" alt="">
+            <img src="/img/Kanye/2.jpg" alt="">
+            <img src="/img/Kanye/3.jpg" alt="">
+			<img src="/img/Kanye/4.jpg" alt="">
         </main>
 		<div class="footer">
 			<ul>
